# reversi-ai

./: .clang-tidy  CMakeLists.txt  README.md
game/: CMakeLists.txt
reversi/: CMakeLists.txt  reversi.cpp
reversi/ai/: ai.cpp  ai.hpp  state.hpp
reversi/game/: game.cpp  game.hpp
